Fixed the Article wrapping

--- a/index.css
+++ b/index.css
@@ -9,6 +9,18 @@
   justify-content: space-between;
   background-color: #D9D9D9;
 }
+
+@media screen and (min-width:850px)
+{
+  .home-page-section{
+    flex-wrwap: wrap;
+  }
+  .home-article-section{
+    widht: 100%;
+    align-self:center;
+  }
+}
+
 .nav-bar-navs {
   gap: var(--dl-space-space-oneandhalfunits);
   width: auto;
@@ -165,7 +177,7 @@
   width: 25%;
   height: auto;
   display: flex;
-  align-self: center;
+  align-self: flex-start;
   align-items: center;
   margin-left: var(--dl-space-space-halfunit);
   padding-top: var(--dl-space-space-unit);
@@ -177,6 +189,7 @@
   padding-bottom: var(--dl-space-space-unit);
   justify-content: center;
   background-color: #D9D9D9;
+  overflow-x: auto;
 }
 .home-article-text {
   align-self: flex-start;
@@ -220,9 +233,14 @@
   padding-bottom: var(--dl-space-space-halfunit);
   background-color: rgba(167, 167, 167, 0.3);
 }
-@media(max-width: 991px) {
+@media(max-width: 850px) {
   .home-article-section {
+    width: 100%;
     align-self: center;
+  }
+  .home-page-section{
+    flex-wrap: wrap;
+    overflow-x: auto;
   }
 }
 
